fix(examples): auto overflow, fix icons example

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,3 +7,7 @@ html, body {
   background: $background_light;
   color: $text_black;
 }
+
+* {
+  box-sizing: border-box;
+}
